--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "core-js": "^2.4.1",
+    "ng-http-loader": "^0.9.1",
+    "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
